--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "set-init": "sh script/set-init.sh",
-    "dev": "vite --port 8080 --host",
+    "dev": "vite --host --open",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --fix",
     "preview": "vite preview",
